level 2 taak 3 I guess

--- a/Race Simulator/Race Simulator.csproj
+++ b/Race Simulator/Race Simulator.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>Race_Simulator</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ControllerTest\ControllerTest.csproj" />
+    <ProjectReference Include="..\Controller\Controller.csproj" />
+    <ProjectReference Include="..\Model\Model.csproj" />
+  </ItemGroup>
+
 </Project>
