--- a/ControllerTest/ControllerTest.csproj
+++ b/ControllerTest/ControllerTest.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Controller\Controller.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
