--- a/RaceWPF/RaceWPF.csproj
+++ b/RaceWPF/RaceWPF.csproj
@@ -7,75 +7,137 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Assets\Cars\East\**" />
+    <Compile Remove="Assets\Cars\North\**" />
+    <Compile Remove="Assets\Cars\South\**" />
+    <Compile Remove="Assets\Cars\West\**" />
+    <EmbeddedResource Remove="Assets\Cars\East\**" />
+    <EmbeddedResource Remove="Assets\Cars\North\**" />
+    <EmbeddedResource Remove="Assets\Cars\South\**" />
+    <EmbeddedResource Remove="Assets\Cars\West\**" />
+    <None Remove="Assets\Cars\East\**" />
+    <None Remove="Assets\Cars\North\**" />
+    <None Remove="Assets\Cars\South\**" />
+    <None Remove="Assets\Cars\West\**" />
+    <Page Remove="Assets\Cars\East\**" />
+    <Page Remove="Assets\Cars\North\**" />
+    <Page Remove="Assets\Cars\South\**" />
+    <Page Remove="Assets\Cars\West\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Assets\Cars\broken.png" />
-    <None Remove="Assets\Cars\East\Blue.png" />
-    <None Remove="Assets\Cars\East\Green.png" />
-    <None Remove="Assets\Cars\East\Grey.png" />
-    <None Remove="Assets\Cars\East\Purple.png" />
-    <None Remove="Assets\Cars\East\Red.png" />
-    <None Remove="Assets\Cars\East\Yellow.png" />
-    <None Remove="Assets\Cars\North\Blue.png" />
-    <None Remove="Assets\Cars\North\Green.png" />
-    <None Remove="Assets\Cars\North\Grey.png" />
-    <None Remove="Assets\Cars\North\Purple.png" />
-    <None Remove="Assets\Cars\North\Red.png" />
-    <None Remove="Assets\Cars\North\Yellow.png" />
-    <None Remove="Assets\Cars\South\Blue.png" />
-    <None Remove="Assets\Cars\South\Green.png" />
-    <None Remove="Assets\Cars\South\Grey.png" />
-    <None Remove="Assets\Cars\South\Purple.png" />
-    <None Remove="Assets\Cars\South\Red.png" />
-    <None Remove="Assets\Cars\South\Yellow.png" />
-    <None Remove="Assets\Cars\West\Blue.png" />
-    <None Remove="Assets\Cars\West\Green.png" />
-    <None Remove="Assets\Cars\West\Grey.png" />
-    <None Remove="Assets\Cars\West\Purple.png" />
-    <None Remove="Assets\Cars\West\Red.png" />
-    <None Remove="Assets\Cars\West\Yellow.png" />
+    <None Remove="Assets\Cars\Broken\Blue.png" />
+    <None Remove="Assets\Cars\Broken\Green.png" />
+    <None Remove="Assets\Cars\Broken\Grey.png" />
+    <None Remove="Assets\Cars\Broken\Purple.png" />
+    <None Remove="Assets\Cars\Broken\Red.png" />
+    <None Remove="Assets\Cars\Broken\Yellow.png" />
+    <None Remove="Assets\Cars\Cars\Blue.png" />
+    <None Remove="Assets\Cars\Cars\broken.png" />
+    <None Remove="Assets\Cars\Cars\Green.png" />
+    <None Remove="Assets\Cars\Cars\Grey.png" />
+    <None Remove="Assets\Cars\Cars\Purple.png" />
+    <None Remove="Assets\Cars\Cars\Red.png" />
+    <None Remove="Assets\Cars\Cars\Yellow.png" />
+    <None Remove="Assets\Cars\Turned\East\Blue.png" />
+    <None Remove="Assets\Cars\Turned\East\Green.png" />
+    <None Remove="Assets\Cars\Turned\East\Grey.png" />
+    <None Remove="Assets\Cars\Turned\East\Purple.png" />
+    <None Remove="Assets\Cars\Turned\East\Red.png" />
+    <None Remove="Assets\Cars\Turned\East\Yellow.png" />
+    <None Remove="Assets\Cars\Turned\North\Blue.png" />
+    <None Remove="Assets\Cars\Turned\North\Green.png" />
+    <None Remove="Assets\Cars\Turned\North\Grey.png" />
+    <None Remove="Assets\Cars\Turned\North\Purple.png" />
+    <None Remove="Assets\Cars\Turned\North\Red.png" />
+    <None Remove="Assets\Cars\Turned\North\Yellow.png" />
+    <None Remove="Assets\Cars\Turned\South\Blue.png" />
+    <None Remove="Assets\Cars\Turned\South\Green.png" />
+    <None Remove="Assets\Cars\Turned\South\Grey.png" />
+    <None Remove="Assets\Cars\Turned\South\Purple.png" />
+    <None Remove="Assets\Cars\Turned\South\Red.png" />
+    <None Remove="Assets\Cars\Turned\South\Yellow.png" />
+    <None Remove="Assets\Cars\Turned\West\Blue.png" />
+    <None Remove="Assets\Cars\Turned\West\Green.png" />
+    <None Remove="Assets\Cars\Turned\West\Grey.png" />
+    <None Remove="Assets\Cars\Turned\West\Purple.png" />
+    <None Remove="Assets\Cars\Turned\West\Red.png" />
+    <None Remove="Assets\Cars\Turned\West\Yellow.png" />
+    <None Remove="Assets\Tracks\Corner.png" />
     <None Remove="Assets\Tracks\CornerNE.png" />
     <None Remove="Assets\Tracks\CornerNW.png" />
     <None Remove="Assets\Tracks\CornerSE.png" />
     <None Remove="Assets\Tracks\CornerSW.png" />
     <None Remove="Assets\Tracks\Finish.png" />
     <None Remove="Assets\Tracks\StartGrid.png" />
+    <None Remove="Assets\Tracks\Straight.png" />
     <None Remove="Assets\Tracks\StraightHori.png" />
     <None Remove="Assets\Tracks\StraightVert.png" />
+    <None Remove="Assets\Tracks\Turned\CornerNE.png" />
+    <None Remove="Assets\Tracks\Turned\CornerNW.png" />
+    <None Remove="Assets\Tracks\Turned\CornerSE.png" />
+    <None Remove="Assets\Tracks\Turned\CornerSW.png" />
+    <None Remove="Assets\Tracks\Turned\StraightHori.png" />
+    <None Remove="Assets\Tracks\Turned\StraightVert.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Assets\Cars\broken.png" />
-    <Content Include="Assets\Cars\East\Blue.png" />
-    <Content Include="Assets\Cars\East\Green.png" />
-    <Content Include="Assets\Cars\East\Grey.png" />
-    <Content Include="Assets\Cars\East\Purple.png" />
-    <Content Include="Assets\Cars\East\Red.png" />
-    <Content Include="Assets\Cars\East\Yellow.png" />
-    <Content Include="Assets\Cars\North\Blue.png" />
-    <Content Include="Assets\Cars\North\Green.png" />
-    <Content Include="Assets\Cars\North\Grey.png" />
-    <Content Include="Assets\Cars\North\Purple.png" />
-    <Content Include="Assets\Cars\North\Red.png" />
-    <Content Include="Assets\Cars\North\Yellow.png" />
-    <Content Include="Assets\Cars\South\Blue.png" />
-    <Content Include="Assets\Cars\South\Green.png" />
-    <Content Include="Assets\Cars\South\Grey.png" />
-    <Content Include="Assets\Cars\South\Purple.png" />
-    <Content Include="Assets\Cars\South\Red.png" />
-    <Content Include="Assets\Cars\South\Yellow.png" />
-    <Content Include="Assets\Cars\West\Blue.png" />
-    <Content Include="Assets\Cars\West\Green.png" />
-    <Content Include="Assets\Cars\West\Grey.png" />
-    <Content Include="Assets\Cars\West\Purple.png" />
-    <Content Include="Assets\Cars\West\Red.png" />
-    <Content Include="Assets\Cars\West\Yellow.png" />
-    <Content Include="Assets\Tracks\CornerNE.png" />
-    <Content Include="Assets\Tracks\CornerNW.png" />
-    <Content Include="Assets\Tracks\CornerSE.png" />
-    <Content Include="Assets\Tracks\CornerSW.png" />
+    <Content Include="Assets\Cars\Broken\Blue.png" />
+    <Content Include="Assets\Cars\Broken\Green.png" />
+    <Content Include="Assets\Cars\Broken\Grey.png" />
+    <Content Include="Assets\Cars\Broken\Purple.png" />
+    <Content Include="Assets\Cars\Broken\Red.png" />
+    <Content Include="Assets\Cars\Broken\Yellow.png" />
+    <Content Include="Assets\Cars\Cars\Blue.png" />
+    <Content Include="Assets\Cars\Cars\broken.png" />
+    <Content Include="Assets\Cars\Cars\Green.png" />
+    <Content Include="Assets\Cars\Cars\Grey.png" />
+    <Content Include="Assets\Cars\Cars\Purple.png" />
+    <Content Include="Assets\Cars\Cars\Red.png" />
+    <Content Include="Assets\Cars\Cars\Yellow.png" />
+    <Content Include="Assets\Cars\Turned\East\Blue.png" />
+    <Content Include="Assets\Cars\Turned\East\Green.png" />
+    <Content Include="Assets\Cars\Turned\East\Grey.png" />
+    <Content Include="Assets\Cars\Turned\East\Purple.png" />
+    <Content Include="Assets\Cars\Turned\East\Red.png" />
+    <Content Include="Assets\Cars\Turned\East\Yellow.png" />
+    <Content Include="Assets\Cars\Turned\North\Blue.png" />
+    <Content Include="Assets\Cars\Turned\North\Green.png" />
+    <Content Include="Assets\Cars\Turned\North\Grey.png" />
+    <Content Include="Assets\Cars\Turned\North\Purple.png" />
+    <Content Include="Assets\Cars\Turned\North\Red.png" />
+    <Content Include="Assets\Cars\Turned\North\Yellow.png" />
+    <Content Include="Assets\Cars\Turned\South\Blue.png" />
+    <Content Include="Assets\Cars\Turned\South\Green.png" />
+    <Content Include="Assets\Cars\Turned\South\Grey.png" />
+    <Content Include="Assets\Cars\Turned\South\Purple.png" />
+    <Content Include="Assets\Cars\Turned\South\Red.png" />
+    <Content Include="Assets\Cars\Turned\South\Yellow.png" />
+    <Content Include="Assets\Cars\Turned\West\Blue.png" />
+    <Content Include="Assets\Cars\Turned\West\Green.png" />
+    <Content Include="Assets\Cars\Turned\West\Grey.png" />
+    <Content Include="Assets\Cars\Turned\West\Purple.png" />
+    <Content Include="Assets\Cars\Turned\West\Red.png" />
+    <Content Include="Assets\Cars\Turned\West\Yellow.png" />
+    <Content Include="Assets\Tracks\Corner.png" />
     <Content Include="Assets\Tracks\Finish.png" />
     <Content Include="Assets\Tracks\StartGrid.png" />
-    <Content Include="Assets\Tracks\StraightHori.png" />
-    <Content Include="Assets\Tracks\StraightVert.png" />
+    <Content Include="Assets\Tracks\Straight.png" />
+    <Content Include="Assets\Tracks\Turned\CornerNE.png" />
+    <Content Include="Assets\Tracks\Turned\CornerNW.png" />
+    <Content Include="Assets\Tracks\Turned\CornerSE.png" />
+    <Content Include="Assets\Tracks\Turned\CornerSW.png" />
+    <Content Include="Assets\Tracks\Turned\StraightHori.png" />
+    <Content Include="Assets\Tracks\Turned\StraightVert.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Controller\Controller.csproj" />
   </ItemGroup>
 
 </Project>
